--- a/config/proto.conf
+++ b/config/proto.conf
@@ -10,3 +10,6 @@ CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=128
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
+
+# Increase BLT antenna strength
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
