--- a/config/proto.conf
+++ b/config/proto.conf
@@ -7,6 +7,7 @@
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=128
+CONFIG_ZMK_MOUSE=y
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
