--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: proto_left
+    shield: proto_left nice_view
   - board: nice_nano_v2
     shield: proto_right
