--- a/config/boards/shields/proto/proto.dtsi
+++ b/config/boards/shields/proto/proto.dtsi
@@ -8,9 +8,9 @@
 
 / {
     chosen {
-//        zephyr,display = &oled;
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
+        zmk,display = &nice_view;
     };
 
     default_transform: keymap_transform_0 {
@@ -31,31 +31,14 @@ RC(3,0) RC(3,1)         RC(2,7) RC(2,6) RC(2,5)  RC(2,13) RC(2,14)  RC(2,15)    
 
         diode-direction = "col2row";
         row-gpios
-            = <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&pro_micro 18 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&pro_micro 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            ;
+            = <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+              <&pro_micro 18 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+              <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+              <&pro_micro 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
         wakeup-source;
     };
 };
 
-//&pro_micro_i2c {
-//    status = "okay";
-//
-//    oled: ssd1306@3c {
-//        compatible = "solomon,ssd1306fb";
-//        reg = <0x3c>;
-//        label = "DISPLAY";
-//        width = <128>;
-//        height = <32>;
-//        segment-offset = <0>;
-//        page-offset = <0>;
-//        display-offset = <0>;
-//        multiplex-ratio = <31>;
-//        segment-remap;
-//        com-invdir;
-//        com-sequential;
-//        prechargep = <0x22>;
-//    };
-//};
+nice_view_spi: &spi1 {
+        cs-gpios = <&pro_micro 7 GPIO_ACTIVE_HIGH>;
+};
