--- a/config/proto.conf
+++ b/config/proto.conf
@@ -2,9 +2,6 @@
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-# Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
-
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=128
 CONFIG_ZMK_MOUSE=y
@@ -14,3 +11,7 @@ CONFIG_ZMK_MOUSE=y
 
 # Increase BLT antenna strength
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Display Configuration for Central Side Only
+CONFIG_ZMK_DISPLAY=y             # Enable display (applies to both sides, but overridden by role)
+CONFIG_SPI=y                     # Enable SPI for display
