--- a/config/proto.conf
+++ b/config/proto.conf
@@ -6,12 +6,10 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=128
 CONFIG_ZMK_MOUSE=y
 
-# Turn on logging, and set ZMK logging to debug output
-# CONFIG_ZMK_USB_LOGGING=y
-
 # Increase BLT antenna strength
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Display Configuration for Central Side Only
 CONFIG_ZMK_DISPLAY=y             # Enable display (applies to both sides, but overridden by role)
+CONFIG_DISPLAY=y
 CONFIG_SPI=y                     # Enable SPI for display
