--- a/config/proto.conf
+++ b/config/proto.conf
@@ -8,3 +8,7 @@ CONFIG_ZMK_MOUSE=y
 
 # Increase BLT antenna strength
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
