--- a/config/proto.conf
+++ b/config/proto.conf
@@ -9,8 +9,5 @@ CONFIG_ZMK_MOUSE=y
 # Increase BLT antenna strength
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
-
-CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+# For debugging startup issues like with a display
+# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
