--- a/config/proto.conf
+++ b/config/proto.conf
@@ -6,6 +6,9 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=128
 CONFIG_ZMK_MOUSE=y
 
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=20
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=20
+
 # Increase BLT antenna strength
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
