--- a/config/boards/shields/proto/proto.dtsi
+++ b/config/boards/shields/proto/proto.dtsi
@@ -38,6 +38,24 @@ RC(3,0) RC(3,1)         RC(2,7) RC(2,6) RC(2,5)  RC(2,13) RC(2,14)  RC(2,15)    
     };
 };
 
+/ {
+    split_inputs {
+        #address-cells = <1>;
+        #size-cells = <0>;
+
+        glidepoint_split: glidepoint_split@0 {
+            compatible = "zmk,input-split";
+            reg = <0>;
+        };
+    };
+
+    glidepoint_listener: glidepoint_listener {
+        compatible = "zmk,input-listener";
+        status = "disabled";
+        device = <&glidepoint_split>;
+    };
+};
+
 &pro_micro_i2c {
     status = "disabled";
 };
