add cirque module

--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,15 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: cirque_trackpad
+      url-base: https://github.com/petejohanson
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
+    - name: cirque-input-module
+      revision: main
+      remote: cirque_trackpad
   self:
     path: config
