--- a/config/proto.conf
+++ b/config/proto.conf
@@ -13,4 +13,4 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=20
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # For debugging startup issues like with a display
-# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
