--- a/build.yaml
+++ b/build.yaml
@@ -15,5 +15,7 @@
 include:
   - board: nice_nano_v2
     shield: proto_left nice_view
+    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: proto_right
+    snippet: zmk-usb-logging
